Fix topbar icon cutoff on view page
Update focused-app container top position from 40px to 46px to match topbar height and prevent overlap

--- a/src/app/components/shared/top-bar/topbar.component.scss
+++ b/src/app/components/shared/top-bar/topbar.component.scss
@@ -50,6 +50,7 @@ mat-icon, .mat-icon {
   --mat-icon-color: var(--mat-sys-on-primary);
 }
 
-.margin-auto button mat-icon {
+.margin-auto button mat-icon,
+.margin-auto a mat-icon {
   color: var(--mat-sys-primary);
 }
